fix z-score table

--- a/1-linear-regression/lin-reg.ipynb
+++ b/1-linear-regression/lin-reg.ipynb
@@ -522,32 +522,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Terms        Coefficient       Std.Error         Z-Score\n",
-      "       Intercept            2.46            0.09           27.60\n",
-      "          lcavol            0.68            0.13            5.37\n",
-      "         lweight            0.26            0.10            2.75\n",
-      "             age           -0.14            0.10           -1.40\n",
-      "            lbph            0.21            0.10            2.06\n",
-      "             svi            0.30            0.12            2.47\n",
-      "             lcp           -0.29            0.15           -1.87\n",
-      "         gleason           -0.02            0.14           -0.15\n",
-      "           pgg45            0.27            0.15            1.74\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coefficient</th>\n",
+       "      <th>Std. Error</th>\n",
+       "      <th>Z Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Intercept</th>\n",
+       "      <td>2.464933</td>\n",
+       "      <td>0.089315</td>\n",
+       "      <td>27.598203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lcavol</th>\n",
+       "      <td>0.676016</td>\n",
+       "      <td>0.125975</td>\n",
+       "      <td>5.366290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lweight</th>\n",
+       "      <td>0.261694</td>\n",
+       "      <td>0.095134</td>\n",
+       "      <td>2.750789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>-0.140734</td>\n",
+       "      <td>0.100819</td>\n",
+       "      <td>-1.395909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lbph</th>\n",
+       "      <td>0.209061</td>\n",
+       "      <td>0.101691</td>\n",
+       "      <td>2.055846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>svi</th>\n",
+       "      <td>0.303623</td>\n",
+       "      <td>0.122962</td>\n",
+       "      <td>2.469255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lcp</th>\n",
+       "      <td>-0.287002</td>\n",
+       "      <td>0.153731</td>\n",
+       "      <td>-1.866913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gleason</th>\n",
+       "      <td>-0.021195</td>\n",
+       "      <td>0.144497</td>\n",
+       "      <td>-0.146681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pgg45</th>\n",
+       "      <td>0.265576</td>\n",
+       "      <td>0.152820</td>\n",
+       "      <td>1.737840</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Coefficient  Std. Error    Z Score\n",
+       "Intercept     2.464933    0.089315  27.598203\n",
+       "lcavol        0.676016    0.125975   5.366290\n",
+       "lweight       0.261694    0.095134   2.750789\n",
+       "age          -0.140734    0.100819  -1.395909\n",
+       "lbph          0.209061    0.101691   2.055846\n",
+       "svi           0.303623    0.122962   2.469255\n",
+       "lcp          -0.287002    0.153731  -1.866913\n",
+       "gleason      -0.021195    0.144497  -0.146681\n",
+       "pgg45         0.265576    0.152820   1.737840"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "terms = ['Intercept'] + [i for i in X_train.columns]\n",
     "\n",
-    "print(f\"{'Terms':>15} {'Coefficient':>18} {'Std.Error':>15} {'Z-Score':>15}\")\n",
-    "for i in range(len(beta)):\n",
-    "    print(f\" {terms[i]:>15} {beta[i]:>15.2f} {standard_errors[i]:>15.2f} {z_scores[i]:>15.2f}\")"
+    "pd.DataFrame({'Coefficient': beta, 'Std. Error': standard_errors,'Z Score' : z_scores}, index = terms)\n"
    ]
   },
   {
