add stretch goals

--- a/1-linear-regression/lin-reg.ipynb
+++ b/1-linear-regression/lin-reg.ipynb
@@ -1398,7 +1398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stretch Goal: Adding interaction terms\n",
+    "# Stretch Goal: Adding nonlinearity & interaction terms\n",
     "\n",
     "Reference: https://medium.com/@haahussain/interaction-terms-in-regression-models-4a8f1e503d49#:~:text=To%20account%20for%20the%20interaction,is%20called%20our%20interaction%20term.\n",
     "\n",
@@ -1406,12 +1406,20 @@
     "I will add a new interaction term to the bananas dataset. In particular, I tried (size x weight), (ripeness x sweetness), and (harvesttime x sweetness). \n",
     "\n",
     "\n",
-    "Adding the harvesttime x sweetness term improved the linear regression MSE by .2!, so I was able to improve performance :)"
+    "Adding the harvesttime x sweetness term improved the linear regression MSE by .2!, so I was able to improve performance :)\n",
+    "Adding a non-linear ripeness term to that also brought the mse down to .99!\n",
+    "\n",
+    "\n",
+    "Final results:\\\n",
+    "Previous MSE: 1.234241750402477 \\\n",
+    "MSE with Interaction Term: 1.0437787602986988 \\\n",
+    "MSE with Non-Linear Term: 1.2250870688124968 \\\n",
+    "MSE with both:  0.9929274838355083"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1529,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1569,6 +1577,7 @@
        "      <th>Acidity</th>\n",
        "      <th>Quality</th>\n",
        "      <th>interaction</th>\n",
+       "      <th>non-linear</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1583,6 +1592,7 @@
        "      <td>0.271290</td>\n",
        "      <td>1</td>\n",
        "      <td>0.907341</td>\n",
+       "      <td>5.931999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1595,6 +1605,7 @@
        "      <td>0.307325</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.309528</td>\n",
+       "      <td>4.274758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1607,6 +1618,7 @@
        "      <td>1.427322</td>\n",
        "      <td>1</td>\n",
        "      <td>-1.015208</td>\n",
+       "      <td>9.552077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1619,6 +1631,7 @@
        "      <td>0.477862</td>\n",
        "      <td>1</td>\n",
        "      <td>-1.901467</td>\n",
+       "      <td>3.508135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1631,6 +1644,7 @@
        "      <td>2.812442</td>\n",
        "      <td>1</td>\n",
        "      <td>0.032132</td>\n",
+       "      <td>1.162829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1644,27 +1658,28 @@
        "3 -0.868524  1.566201   1.889605 -1.273761    -1.006278  1.873001  0.477862   \n",
        "4  0.651825  1.319199  -0.022459 -1.209709    -1.430692  1.078345  2.812442   \n",
        "\n",
-       "   Quality  interaction  \n",
-       "0        1     0.907341  \n",
-       "1        1    -0.309528  \n",
-       "2        1    -1.015208  \n",
-       "3        1    -1.901467  \n",
-       "4        1     0.032132  "
+       "   Quality  interaction  non-linear  \n",
+       "0        1     0.907341    5.931999  \n",
+       "1        1    -0.309528    4.274758  \n",
+       "2        1    -1.015208    9.552077  \n",
+       "3        1    -1.901467    3.508135  \n",
+       "4        1     0.032132    1.162829  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bananas_df[\"interaction\"] = bananas_df['HarvestTime']*bananas_df['Sweetness']\n",
+    "bananas_df[\"non-linear\"] = bananas_df['Ripeness'] ** 2\n",
     "bananas_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,14 +1701,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6000, 8) (1000, 8) (1000, 8)\n"
+      "(6000, 9) (1000, 9) (1000, 9)\n"
      ]
     }
    ],
@@ -1712,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1720,22 +1735,58 @@
      "output_type": "stream",
      "text": [
       "Previous MSE: 1.234241750402477\n",
-      "MSE with Interaction Term: 1.0437787602986988\n"
+      "MSE with Interaction Term: 1.0437787602986988\n",
+      "MSE with Non-Linear Term: 1.2250870688124968\n",
+      "MSE with both:  0.9929274838355083\n"
      ]
     }
    ],
    "source": [
-    "X_train_b = np.hstack((np.ones((X_train.shape[0], 1)), X_train))    # add bias terms (ones) to first col -> (N, p+1)\n",
+    "X_train_b = np.hstack((np.ones((X_train.drop(columns='interaction').shape[0], 1)), X_train.drop(columns='interaction')))    \n",
+    "X_test_b = np.hstack((np.ones((X_test.drop(columns='interaction').shape[0], 1)), X_test.drop(columns='interaction')))\n",
+    "\n",
+    "beta = np.linalg.inv(X_train_b.T @ X_train_b) @ X_train_b.T @ y_train \n",
+    "\n",
+    "y_pred = np.dot(X_test_b, beta) # estimate for tests\n",
+    "nonlin_mse = np.mean((y_test - y_pred)**2) # compute MSE\n",
+    "\n",
+    "\n",
+    "X_train_b = np.hstack((np.ones((X_train.drop(columns='non-linear').shape[0], 1)), X_train.drop(columns='non-linear')))    \n",
+    "X_test_b = np.hstack((np.ones((X_test.drop(columns='non-linear').shape[0], 1)), X_test.drop(columns='non-linear')))\n",
+    "\n",
+    "beta = np.linalg.inv(X_train_b.T @ X_train_b) @ X_train_b.T @ y_train \n",
+    "\n",
+    "y_pred = np.dot(X_test_b, beta) # estimate for tests\n",
+    "int_mse = np.mean((y_test - y_pred)**2) # compute MSE\n",
+    "\n",
+    "\n",
+    "X_train_b = np.hstack((np.ones((X_train.shape[0], 1)), X_train))    \n",
     "X_test_b = np.hstack((np.ones((X_test.shape[0], 1)), X_test))\n",
     "\n",
-    "beta = np.linalg.inv(X_train_b.T @ X_train_b) @ X_train_b.T @ y_train # shape: (9,), estimated coefficients\n",
+    "beta = np.linalg.inv(X_train_b.T @ X_train_b) @ X_train_b.T @ y_train \n",
     "\n",
     "y_pred = np.dot(X_test_b, beta) # estimate for tests\n",
     "mse = np.mean((y_test - y_pred)**2) # compute MSE\n",
     "\n",
     "print(\"Previous MSE: 1.234241750402477\")\n",
-    "print(\"MSE with Interaction Term:\", mse)"
+    "print(\"MSE with Interaction Term:\", int_mse)\n",
+    "print('MSE with Non-Linear Term:', nonlin_mse)\n",
+    "print('MSE with both: ', mse)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
