add previous assignments

--- a/2-logistic-regression/log-reg.ipynb
+++ b/2-logistic-regression/log-reg.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,45 +86,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>134</td>\n",
-       "      <td>13.60</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>27.78</td>\n",
-       "      <td>Present</td>\n",
-       "      <td>60</td>\n",
-       "      <td>25.99</td>\n",
-       "      <td>57.34</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>328</th>\n",
-       "      <td>106</td>\n",
-       "      <td>5.60</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>12.30</td>\n",
-       "      <td>Absent</td>\n",
-       "      <td>49</td>\n",
-       "      <td>20.29</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>136</td>\n",
-       "      <td>13.20</td>\n",
-       "      <td>7.18</td>\n",
-       "      <td>35.95</td>\n",
-       "      <td>Absent</td>\n",
-       "      <td>48</td>\n",
-       "      <td>29.19</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>172</th>\n",
        "      <td>124</td>\n",
        "      <td>0.00</td>\n",
@@ -138,17 +99,56 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>390</th>\n",
+       "      <th>141</th>\n",
        "      <td>130</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>22.03</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>4.89</td>\n",
+       "      <td>9.39</td>\n",
        "      <td>Present</td>\n",
-       "      <td>69</td>\n",
-       "      <td>24.34</td>\n",
-       "      <td>12.86</td>\n",
-       "      <td>39</td>\n",
+       "      <td>63</td>\n",
+       "      <td>19.30</td>\n",
+       "      <td>17.47</td>\n",
+       "      <td>25</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>170</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>35.45</td>\n",
+       "      <td>Present</td>\n",
+       "      <td>50</td>\n",
+       "      <td>27.14</td>\n",
+       "      <td>7.92</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>126</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>4.87</td>\n",
+       "      <td>15.16</td>\n",
+       "      <td>Present</td>\n",
+       "      <td>65</td>\n",
+       "      <td>22.01</td>\n",
+       "      <td>11.11</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>132</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>8.66</td>\n",
+       "      <td>Present</td>\n",
+       "      <td>61</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>3.87</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,14 +156,14 @@
       ],
       "text/plain": [
        "     sbp  tobacco   ldl  adiposity  famhist  typea  obesity  alcohol  age  chd\n",
-       "4    134    13.60  3.50      27.78  Present     60    25.99    57.34   49    1\n",
-       "328  106     5.60  3.20      12.30   Absent     49    20.29     0.00   39    0\n",
-       "231  136    13.20  7.18      35.95   Absent     48    29.19     0.00   62    0\n",
        "172  124     0.00  4.79      34.71   Absent     49    26.09     9.26   47    0\n",
-       "390  130     0.54  3.63      22.03  Present     69    24.34    12.86   39    1"
+       "141  130     2.78  4.89       9.39  Present     63    19.30    17.47   25    1\n",
+       "182  170     4.20  4.67      35.45  Present     50    27.14     7.92   60    1\n",
+       "368  126     3.40  4.87      15.16  Present     65    22.01    11.11   38    0\n",
+       "434  132     0.00  3.55       8.66  Present     61    18.50     3.87   16    0"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
     "\n",
     "            # Update weights and bias\n",
     "            if use_l2:\n",
-    "                weights += (lr * (weights_gradient + reg_lambda * weights)).astype(float)\n",
+    "                weights += (lr * (weights_gradient - reg_lambda * weights)).astype(float)\n",
     "            else:\n",
     "                weights += (lr * weights_gradient).astype(float)\n",
     "            bias += lr * bias_gradient\n",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,14 +326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Unregularized) Train Acc: 0.7479674796747967, Val Acc: 0.7608695652173914\n"
+      "(Unregularized) Train Acc: 0.7235772357723578, Val Acc: 0.8043478260869565\n"
      ]
     }
    ],
@@ -350,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(With L2 Regularization) Train Acc: 0.7262872628726287, Val Acc: 0.6739130434782609\n"
+      "(With L2 Regularization) Train Acc: 0.7127371273712737, Val Acc: 0.6956521739130435\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best training accuracy:  0.7479674796747967\n"
+      "best training accuracy:  0.7371273712737128\n"
      ]
     }
    ],
@@ -442,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Stepwise) Train Acc: 0.7479674796747967, Val Acc: 0.6956521739130435\n"
+      "(Stepwise) Train Acc: 0.7371273712737128, Val Acc: 0.8478260869565217\n"
      ]
     }
    ],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "np.float64(0.6536796536796536)"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,17 +481,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Baseline)               Test Acc: 0.7021276595744681\n",
-      "(Unregularized)          Test Acc: 0.723404255319149\n",
-      "(With L2 Regularization) Test Acc: 0.7659574468085106\n",
-      "(Stepwise)               Test Acc: 0.8085106382978723\n"
+      "(Baseline)               Test Acc: 0.723404255319149\n",
+      "(Unregularized)          Test Acc: 0.7021276595744681\n",
+      "(With L2 Regularization) Test Acc: 0.723404255319149\n",
+      "(Stepwise)               Test Acc: 0.7659574468085106\n"
      ]
     }
    ],
@@ -518,12 +518,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Most Important Features\n",
+    "\n",
+    "It appears that the top three most important features are adiposity, ldl, and tobacco."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_w = np.zeros(9)\n",
+    "best_w[:6] = best_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_weights = np.vstack((np.abs(weights_unreg), np.abs(weights_reg), np.abs(best_w)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.19898949, 0.34325044, 0.40823434, 0.10296894, 0.53874685,\n",
+       "       0.21328618, 0.17706886, 0.10602851, 0.21772979])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(all_weights, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# BANANA QUALITY PART 3 🍌🍌🍌"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +682,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 283,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,14 +714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best training accuracy:  0.8778125\n"
+      "best training accuracy:  0.875\n"
      ]
     }
    ],
@@ -682,16 +731,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Unregularized)          Train Acc: 0.8665625, Val Acc: 0.86\n",
-      "(With L2 Regularization) Train Acc: 0.87234375, Val Acc: 0.865\n",
-      "(Stepwise)               Train Acc: 0.8778125, Val Acc: 0.86625\n"
+      "(Unregularized)          Train Acc: 0.86984375, Val Acc: 0.86875\n",
+      "(With L2 Regularization) Train Acc: 0.86703125, Val Acc: 0.87\n",
+      "(Stepwise)               Train Acc: 0.875, Val Acc: 0.8725\n"
      ]
     }
    ],
@@ -721,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +779,7 @@
        "np.float64(0.50075)"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -749,9 +798,9 @@
      "output_type": "stream",
      "text": [
       "(Baseline)               Test Acc: 0.465\n",
-      "(Unregularized)          Test Acc: 0.8975\n",
-      "(With L2 Regularization) Test Acc: 0.8775\n",
-      "(Stepwise)               Test Acc: 0.8875\n"
+      "(Unregularized)          Test Acc: 0.86625\n",
+      "(With L2 Regularization) Test Acc: 0.86125\n",
+      "(Stepwise)               Test Acc: 0.88125\n"
      ]
     }
    ],
@@ -772,6 +821,56 @@
     "y_test_pred_step = predict(X_test.iloc[:, np.unique(best_features)], best_weights, best_bias)\n",
     "test_acc_step = accuracy_score(y_test, y_test_pred_step)\n",
     "print(f'(Stepwise)               Test Acc: {test_acc_step}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most Important Features\n",
+    "\n",
+    "It appears that the top three most important features are Size, Weight, and HarvestTime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_w = np.zeros(7)\n",
+    "best_w[:2] = best_weights[:2]   # feature 3 is skipped\n",
+    "best_w[4:] = best_weights[3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_weights = np.vstack((np.abs(weights_unreg), np.abs(weights_reg), np.abs(best_w)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.58332518, 2.04030195, 0.82595038, 0.00970466, 0.9950375 ,\n",
+       "       0.99182706, 0.14573606])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(all_weights, axis=0)"
    ]
   },
   {
